--- a/responsiveChallenge/challenge02/style.css
+++ b/responsiveChallenge/challenge02/style.css
@@ -27,11 +27,13 @@ body {
   width: 80%;
   max-width: 750px;
   margin: 0 auto;
+  
+}
+.intro{
   background: #23424a;
   color: white;
   padding: 50px 0;
 }
-
 .intro-content {
   width: 50%;
 }
